--- a/schedease/src/main/resources/application.properties
+++ b/schedease/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+server.port=8080
+spring.data.mongodb.uri=mongodb+srv://geraldang2022:QLI36VY0VKxd3aeJ@cluster0.hochipr.mongodb.net/
+spring.data.mongodb.database=db01
