updated to ignore secret files

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ build/
 ### VS Code ###
 .vscode/
 schedease/src/main/resources/credentials.json
+schedease/src/main/resources/my_credentials.json
 schedease/tokens/
 
 # Add additional ignores for build/ directories if needed
