--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ build/
 .vscode/
 schedease/src/main/resources/credentials.json
 schedease/src/main/resources/my_credentials.json
+schedease/src/main/resources/application.properties
 schedease/tokens/
 
 # Add additional ignores for build/ directories if needed
