--- a/schedease/pom.xml
+++ b/schedease/pom.xml
@@ -64,8 +64,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
-	  	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
